--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
     <script>
-      
-      System.import('aurelia-bootstrapper');
+        System.import('babel-polyfill').then(function() {
+            System.import('aurelia-bootstrapper');
+        }, console.error.bind(console));
     </script>
   </body>
 </html>
