remove material-design-lite from jspm dependency

--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
   <head>
     <base href="/" />
     <title>Aurelia</title>
-    <link rel="stylesheet" href="dist/main.css">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="node_modules/material-design-lite/dist/material.blue-amber.min.css" />
+    <link rel="stylesheet" href="dist/main.css">
   </head>
 
   <body aurelia-app="main">
-
+    <h1>Loading...</h1>
+      
+    <script src="node_modules/material-design-lite/material.min.js"></script>
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
     <script>
