--- a/src/another-child.html
+++ b/src/another-child.html
@@ -1,3 +1,6 @@
 <template>
+    <require from="./grand-grand-child"></require>
     <h2>${message}</h2>
+    
+    <grand-grand-child></grand-grand-child>
 </template>
