figured out binding to child

--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,6 @@
 
     <button click.trigger="sayHello()">Say Hello</button>
     
-    <child-component name.bind="firstName"></child-component>
+    <child-component first-name.bind="firstName"></child-component>
 
 </template>
