--- a/src/child-component.html
+++ b/src/child-component.html
@@ -1,5 +1,5 @@
-<template bindable="name">
+<template bindable="firstName">
     <require from="./another-child"></require>
-    <h2>${message} ${name}</h2>
+    <h2>${message} ${firstName}</h2>
     <another-child></another-child>
 </template>
